@@ -1,3 +1,7 @@
+2003/10/18
+   fix
+   1. copy text to both mouse key and clipboard
+
 2003/10/16
    fix
    1. checking Python 2.3, 2.2
